[package]
name = "termage"
version = "1.1.0"
authors = ["Calum Forster <calumforster@live.co.uk>"]
readme = "README.md"
keywords = ["terminal", "image", "view", "termage"]
repository = "https://github.com/calum/terminal_image_display"
license = "MIT/Apache-2.0"
description = "Display images in the terminal!"
exclude = ["docs/*"]

[[bin]]
name = "termage"
path = "src/bin/main.rs"
doc = false

[lib]
name = "termage"
path = "src/lib.rs"

[dependencies]
image = "0.19.0"
terminal_graphics = "0.1.4"
terminal_size = "*"
clap = "*"
